# bgfx-test

./: .dir-locals.el  .gitmodules  CMakeLists.txt  run
shaders/: varying.def.sc  vs_triangle.sc
src/: main.cpp  shader.cpp  shader.hpp
